# kaze

./: .gitignore  CMakeLists.txt  debug.cpp
src/: pch.hpp
src/ast/: ast.cpp  ast.hpp
src/interpret/: interpret.cpp  interpret.hpp
src/lex/: lex.cpp  lex.hpp
src/parse/: parse.cpp  parse.hpp
src/test/: test.cpp  test.hpp
src/token/: token.cpp  token.hpp
src/utils/: common.hpp  exception.hpp
